overflow fix and infinite scroll added

--- a/style.css
+++ b/style.css
@@ -550,6 +550,9 @@ section.second {
         width: 150px;
         height: 250px;
     }
+    .page2 {
+        overflow-x: hidden;
+    }
 }
 
 
